--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <title>Geolocation</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="script/map.js"></script>
+    
     <script data-cfasync="false" data-no-instant="" src="//code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script>
+    <script src="script/map.js"></script>
+    <script src="script/geolocation.js"></script>
     <!-- jsFiddle will insert css and js -->
   </head>
   <body>
@@ -27,7 +29,7 @@
      with https://www.npmjs.com/package/@googlemaps/js-api-loader.
     -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL1YlMnOHhqWZUoIxSe_HEM67MiuEwf04&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL1YlMnOHhqWZUoIxSe_HEM67MiuEwf04&language=en&callback=initMap&v=weekly"
       defer
     ></script>
   </body>
